# ica-adk

./: .env  .gitignore  README.md  pyproject.toml
deployment/agent_engine/: deploy.py  list.py  test_remote.py
deployment/gemini_ent/: delete.sh  deploy.sh  list.sh
ica_agent/: __init__.py  agent.py  agent.py.old2  image_parser.py  product_name_agent.py  seq.py  test_local.py  tools.py
ica_agent/data_generation/: data_generation.sql
mcp_servers/bigquery/: bigquery.yaml  commands.txt
